[package]
name = "breez-sdk-core"
edition = "2021"
version.workspace = true

[lib]
name = "breez_sdk_core"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
anyhow = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true, features = ["serde", "rand"] }
chrono = "0.4"
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
env_logger = "0.10"
futures = "0.3.30"
rand = "0.8"
tiny-bip39 = "1"
tokio = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = "1.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdk-common = { path = "../sdk-common" }
tonic = { workspace = true, features = [
    "tls",
    "transport",
    "tls-roots",
    "tls-webpki-roots",
] }
log = { workspace = true }
once_cell = { workspace = true }
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06"}
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
const_format = "0.2"
miniz_oxide = "0.7.1"
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde_with = "3.3.0"
ryu = "1.0.18"
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", rev = "v0.7.0-rc.0" }
vss-client-ng = { git = "https://github.com/lightningdevkit/vss-client", rev = "5934149a0ba75867eb364661bfe15e2d36ce8b88", default-features = false }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[dev-dependencies]
base64 = { workspace = true }
mockall = "0.13.1"
regex = { workspace = true }
sdk-common = { path = "../sdk-common", features = ["test-utils"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
