[package]
name = "sdk-itest"
edition = "2024"
version.workspace = true

[dependencies]
anyhow.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
breez-sdk-core = { path = "../sdk-core" }
futures = "0.3.31"
hex.workspace = true
rand = "0.9.2"
reqwest = { workspace = true, features = ["default-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
testcontainers = { version = "0.25.0", features = ["http_wait"] }
testcontainers-modules = { version = "0.13.0", features = ["mariadb", "postgres"] }
testdir = "0.9.3"
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic_lnd = "0.5.1"
tracing = "0.1.41"

[dev-dependencies]
rstest = "0.26.1"
test-log = { version = "0.2.18", features = ["trace"] }
tokio-test = "0.4.4"

[lints]
workspace = true
