[package]
name = "vss-signing-auth"
version.workspace = true
edition = "2021"

[features]
default = ["auth", "signing"]
auth = ["thiserror"]
signing = ["async-trait", "vss-client-ng"]

[dependencies]
async-trait = { workspace = true, optional = true }
bitcoin = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true, optional = true }
vss-client-ng = { workspace = true, optional = true }
zbase32 = "0.1.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
