[package]
name = "lsps2-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
env_logger = "0.11.8"
ldk-node = { git = "https://github.com/andrei-21/ldk-node", branch = "lsp-prototype" }
log = "0.4.27"
serde = { version = "1.0.226", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
